<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="SpotifyBtn">Spotify Streamer</string>
    <string name="ScoresBtn">Scores App</string>
    <string name="LibraryBtn">Library App</string>
    <string name="BuilditBtn">Build it Bigger</string>
    <string name="ReaderBtn">XYZ Reader</string>
    <string name="CAPSTONEBtn">CAPSTONE</string>
    <string name="SpotifyText">This button will launch Spotify Streamer</string>
    <string name="ScoresText">This button will launch Scores App</string>
    <string name="LibraryText">This button will launch Library App</string>
    <string name="BuilditText">This button will launch Build it Bigger</string>
    <string name="ReaderText">This button will launch XYZ Reader</string>
    <string name="CapstoneText">This button will launch CAPSTONE</string>

</resources>
