<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aashish.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/SpotifyBtn"
        android:id="@+id/SpotifyBtn"
        android:background="@color/SpotifyBtn"
        android:layout_marginTop="@dimen/Border" />

    <Button
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/ScoresBtn"
        android:id="@+id/ScoresBtn"
        android:background="@color/ScoresBtn"
        android:layout_marginTop="@dimen/Margintop"
   />

    <Button
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/LibraryBtn"
        android:id="@+id/LibraryBtn"
        android:layout_marginTop="@dimen/Margintop"
        android:background="@color/LibraryBtn"
   />

    <Button
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/BuilditBtn"
        android:id="@+id/BuilditBtn"
        android:layout_marginTop="@dimen/Margintop"
        android:background="@color/BuilditBtn"
        android:textColor="@color/White"

/>

    <Button
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/ReaderBtn"
        android:id="@+id/ReaderBtn"
        android:background="@color/ReaderBtn"
        android:textColor="@color/White"
        android:layout_marginTop="@dimen/Margintop"
    />

    <Button
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:text="@string/CAPSTONEBtn"
        android:id="@+id/CAPSTONEBtn"
        android:background="@color/CAPSTONEBtn"
        android:textColor="@color/White"
        android:layout_marginTop="@dimen/Margintop"
        android:layout_marginBottom="@dimen/Border"
/>
</LinearLayout>
</ScrollView>